cabal-version:      3.0
name:               aoc23-haskell
version:            0.1.0.0
license:            MIT
author:             Johan Levin
build-type:         Simple

common warnings
    ghc-options: -Wall

library aoc23
    import:           warnings
    exposed-modules:  Aoc23Solutions
    build-depends:    base ^>=4.17.2.1, containers ^>=0.7, split ^>=0.2.5, monad-memo ^>=0.5.4
    hs-source-dirs:   src
    other-modules:    Day01, Day02, Day03, Day04, Day05, Day06, Day07, Day08, Day09, Day10, Day11,
                      Day12
    default-language: GHC2021

test-suite aoc23-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1, HUnit ^>=1.6.2.0, aoc23
